statum-macros/tests/ui/invalid_machine_cfg_field.stderr
error: Error: #[machine] struct `WorkflowMachine` field `hidden` uses `#[cfg]`, but Statum does not support conditionally compiled machine fields.
       Fix: move the cfg gate to the whole `#[machine]` item or split cfg-specific field sets into separate machines.
  --> tests/ui/invalid_machine_cfg_field.rs:22:5
   |
22 | /     #[cfg(any())]
23 | |     hidden: &'static str,
   | |________________________^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_machine_cfg_field.rs:24:2
   |
24 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_machine_cfg_field.rs`
